syntax = "proto3";
package coolcar;
option go_package="coolcar/proto/gen/go;trippb";
message Location{
    double lagitude=1;
    double longitude=2;
}
enum TripStatus {
    IS_NOT_SPECITED=0;
    NOT_STARTED=1;
    IN_PROGRESS=2;
    FINISHED=3;
    PAID=4;
}
//描述Trip字段
message Trip{
    string start =1;//代表第一个字段是start
    string end =2;
    int32 duration_sec=3;
    int32 fee_cent=4;
    Location start_pos=5;
    Location end_pos=6;
    repeated Location path_locations=7;
    TripStatus status=8;
}
message GetTripRequest{
    string id=1;
}
message GetTripResponse{
    string id=1;
    Trip trip=2;
}
service TripService {
    rpc GetTrip (GetTripRequest) returns (GetTripResponse);
}